refactor: 评估结果拆分 + NoopRerank 条件装配调整 + 小重构
- EvalRunner/EvalReport 重构：拆分出 EvalCaseResult/EvalAssertionResult
  独立记录，评估结果结构更清晰；新增 EvalReportTest
- NoopRerankService：@ConditionalOnMissingBean 改为 @ConditionalOnProperty，
  通过 opsmind.rag.rerank.enabled=false 显式控制（避免 bean 顺序依赖）
- AgentRuntime：getSteps().get(size-1) 改用 Java 21 List.getLast()